--- a/docker/Dockerfile.r-dev
+++ b/docker/Dockerfile.r-dev
@@ -1,6 +1,15 @@
 ARG CPU="arm64"
-
 FROM docker.io/rkrispin/baser-4.4.0:${CPU}-0.0.1
-COPY setting_files/install_packages.R setting_files/packages.json pkgs/
 
-RUN Rscript pkgs/install_packages.R
+ARG REQUIREMENTS="requirements-base.txt"
+ENV REQUIREMENTS=$REQUIREMENTS
+ENV VENV_NAME=$VENV_NAME
+
+COPY setting_files/install_packages.R setting_files/packages.json tmp/
+
+RUN Rscript tmp/install_packages.R
+
+COPY setting_files/update_venv.sh setting_files/$REQUIREMENTS tmp/
+RUN bash tmp/update_venv.sh
+
+RUN rm -rf tmp/*.*
