--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "R Dev Environment",
-    "image": "docker.io/rkrispin/r-dev:arm64.0.0.1",
+    "image": "docker.io/rkrispin/the-forecaster-dev:0.0.1",
     "customizations": {
         "vscode": {
             "extensions": [
@@ -39,5 +39,4 @@
             ]
         }
     }
-    // "postStartCommand": "until [ -f /root/.vscode-R/init.R ]; do sleep 0.1; done; radian"
 }
