--- a/docker/setting_files/requirements-dev.txt
+++ b/docker/setting_files/requirements-dev.txt
@@ -1,11 +1,15 @@
 ipywidgets==8.1.7
-jupyter==1.1.1 
+jupyter==1.1.1
 ipykernel==6.29.1
+pyyaml==6.0.2
+numpy==1.26.4
+scipy==1.14.1
 pandas==2.3.0
 plotly==5.15.0
 plotly-express==0.4.1
 matplotlib==3.10.7
 polars==1.30.0
+statsmodels==0.14.4
 mlforecast==1.0.2
 statsforecast==2.0.3
 ibis==3.3.0
